# weighted-cardinality-estimation

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  asv.conf.json  index.json  info.json  justfile  pyproject.toml  quickstart.py  regressions.json  regressions.xml
asv_results/basePC/: machine.json
benchmarks/: bench_sketches.py  benchmark_exp_sketch.py
graphs/arch-x86_64/branch-master/cpu-Ryzen 7 5800X/machine-basePC/num_cpu-16/os-Ubuntu 24.04.3 LTS x86_64/python-3.12/ram-32GB/: accuracy.track_CV_of_sketch_size_400.json  accuracy.track_mean_of_10000_estimates_sketch_size_400.json  accuracy.track_mean_relative_error_sketch_size_400.json  memory.track_memory_estimate_sketch_size_1000.json  memory.track_memory_serialization_sketch_size_1000.json  memory.track_memory_total_sketch_size_1000.json  memory.track_memory_write_sketch_size_1000.json  regression.track_estimate.json  summary.json  time.time_add_10000_elems_to_sketch_size_1000.json  time.time_estimate_sketch_size_1000.json
graphs/summary/: accuracy.track_CV_of_sketch_size_400.json  accuracy.track_mean_of_10000_estimates_sketch_size_400.json  accuracy.track_mean_relative_error_sketch_size_400.json  memory.track_memory_estimate_sketch_size_1000.json  memory.track_memory_serialization_sketch_size_1000.json  memory.track_memory_total_sketch_size_1000.json  memory.track_memory_write_sketch_size_1000.json  regression.track_estimate.json  time.time_add_10000_elems_to_sketch_size_1000.json  time.time_estimate_sketch_size_1000.json
lib/xoshiro/: xoshiro.hpp
src/weighted_cardinality_estimation/: __init__.py  __init__.pyi  _bindings.cpp  base_log_exp_sketch.cpp  base_log_exp_sketch.hpp  base_log_exp_sketch_jacc.cpp  base_log_exp_sketch_jacc.hpp  base_q_sketch.cpp  base_q_sketch.hpp  base_shifted_log_exp_sketch.cpp  base_shifted_log_exp_sketch.hpp  exp_sketch.cpp  exp_sketch.hpp  exp_sketch_float.cpp  exp_sketch_float.hpp  exp_sketch_float32.hpp  exp_sketch_t.hpp  fast_exp_sketch.cpp  fast_exp_sketch.hpp  fast_exp_sketch_custom_float.cpp  fast_exp_sketch_custom_float.hpp  fast_exp_sketch_t.hpp  fast_k_q_sketch.cpp  fast_k_q_sketch.hpp  fast_k_q_sketch_rounding.cpp  fast_k_q_sketch_rounding.hpp  fast_log_exp_sketch.cpp  fast_log_exp_sketch.hpp  fast_q_sketch.cpp  fast_q_sketch.hpp  fast_shifted_log_exp_sketch.cpp  fast_shifted_log_exp_sketch.hpp  fastgm_exp_sketch.cpp  fastgm_exp_sketch.hpp  fisher_yates.cpp  fisher_yates.hpp  h_fingerprint.cpp  h_fingerprint.hpp  hash_util.hpp  hyper_log_log.hpp  (+33 more)
statistics_asv/: asv_accuracy.py  asv_add_many.py  asv_estimate.py  asv_memory.py  asv_regression.py  common.py  regression.py
tests/: conftest.py  custom_float_configs.py  test_basic_contract.py  test_benchmarks.py  test_copy.py  test_exp_sketch.py  test_exp_sketch_custom_float.py  test_fast_exp_sketch.py  test_jaccard.py  test_log_exp_estimators.py  test_memory_flags.py  test_memory_usage.py  test_merge.py  test_newton.py  test_quantize_custom_float.py  test_ranges.py  test_seeds.py  test_sketches_functional.py  test_sketches_unit.py  test_speed_fast_variants.py  test_stat.py  utils.py
