[build-system]
requires = ["scikit-build-core>=0.9", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "weighted-cardinality-estimation"
version = "0.0.3"
description = "Fast weighted cardinality sketches in C++ with Python bindings."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mateusz Pelechaty", email = "sshozye@gmail.com"}]
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Development Status :: 3 - Alpha",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-benchmark==5.2.3",
  "pytest-rerunfailures",
  "pytest-repeat",
  "numpy",
]
bench = ["asv"]

[project.urls]
Homepage = "https://github.com/Shozye/weighted-cardinality-estimation"
Repository = "https://github.com/Shozye/weighted-cardinality-estimation"

[tool.pytest.ini_options]
addopts = "--reruns 1"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests (deselect with '-m \"not benchmark\"')",
]

[tool.scikit-build]
cmake.version = ">=3.18"
